# ckan_rs

./: .gitignore  Cargo.toml
examples/: table.rs
src/: ckan.rs  data_table.rs  lib.rs  main.rs
