[package]
name = "ckan_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", version = "0.19.0-dev", default-features = false, features = [
  "2d",
  "ui",
  "experimental_bevy_feathers",
] }
crossbeam-channel = "0.5.15"
csv = "1.4.0"
rand = "0.10.1"
serde = "1.0.228"
serde_json = "1.0.149"
xshell = "0.2.7"
